# label-print-service

./: .gitignore  Cargo.toml  README.md  index.html
label-print-service/: README.md
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  qr.rs  routes.rs  zpl.rs
