[package]
name = "label_print_service"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }

# ✨ Step 1: เพิ่มใหม่ - สำหรับ QR Code
qrcode = { version = "0.14", features = ["svg"] }
image = "0.24"
base64 = "0.21"